# RTL-SDR_Control

./: .gitignore  README.md
Server/SDRServer/: CMakeLists.txt  CMakeLists.txt.user.f0d2689  MainProcessor.cpp  MainProcessor.h
Server/SDRServer/SDRController/: CMakeLists.txt  SDRController.cpp  SDRController.h
Server/SDRServer/SDRController/SDRServer/: CMakeLists.txt  CMakeLists.txt.user.ca0b4f0  main.cpp
Server/SDRServer/SDRController/SDRServer/SDRController/: CMakeLists.txt  SDRController.cpp  SDRController.h
Server/SDRServer/SDRController/SDRServer/SDRController/libusb/: README.txt
Server/SDRServer/SDRController/SDRServer/SDRController/libusb/lib/msvc/: libusb.lib
Server/SDRServer/SDRController/SDRServer/SDRController/libusb/lib/msvc_x64/: libusb.lib
Server/SDRServer/SDRController/SDRServer/TcpServerProcessor/: CMakeLists.txt  TcpServerProcessor.cpp  TcpServerProcessor.h
Server/SDRServer/SDRController/libusb/: CHANGELOG.txt
Server/SDRServer/SDRController/libusb/examples/: BenchmarkHelp.txt  benchmark.c
Server/SDRServer/SDRController/libusb/include/: lusb0_usb.h
Server/SDRServer/SDRController/libusb/lib/msvc_arm64/: libusb.lib
Server/SDRServer/TcpServerProcessor/: CMakeLists.txt  TcpServerProcessor.cpp  TcpServerProcessor.h
